--- a/home.html
+++ b/home.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <head>
-    <title>Criar Sala - NLW-Qst</title>
+    <title>Criar Sala - rocket.q</title>
+    <link rel="stylesheet" href="styles/global.css">
+    <link rel="stylesheet" href="styles/home.css">
 </head>
 <body>
     <header>
-        <img src="assets/logo.svg" alt="logo"/>
+        <img src="assets/Logo.svg" alt="logo"/>
     </header>
     <main>
         <div class = "container">
             <section>
                 <h2> Entre como participante</h2>
-                <form>
+                <form action="">
                     <label class ="sr.-only" for="room-id">Código da sala</label>
-                    <input type="text" id="room-id">
-                    <button>Entrar na sala</button>
+                    <input type="number" id="room-id" placeholder="Código da sala">
+                    <button>
+                        <img src ="assets/enter-room.svg" alt="Entrar na sala">
+                    </button>
                 </form>
             </section>
         </div>
@@ -23,6 +27,12 @@
             <div></div>
 
         </div>
+        <section>
+            <h2>Crie sua própria sala de forma fácil</h2>
+            <a href="create-room.html">
+                Criar Sala
+            </a>
+        </section>
     </main>
 </body>
 
