Update global styles and preset some ids

--- a/home.html
+++ b/home.html
@@ -1,39 +1,52 @@
 <!DOCTYPE html>
 <head>
     <title>Criar Sala - rocket.q</title>
+
+    <meta charset ="UTF=8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name = "viewport" content="width-device-width, initial-scale=1.0">
+    <!--CSS-->
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/home.css">
+
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <img src="assets/Logo.svg" alt="logo"/>
-    </header>
-    <main>
-        <div class = "container">
+    <div id = "home" class="content">
+        <header>
+            <img src="assets/Logo.svg" alt="logo"/>
+        </header>
+        <main>
+            <div class = "container">
+                <section>
+                    <h2> Entre como participante</h2>
+                    <form action="">
+                        <label class ="sr-only" for="room-id">Código da sala</label>
+                        <input type="number" id="room-id" placeholder="Código da sala">
+                        <button>
+                            <img src ="assets/create-room.svg" alt="Entrar na sala">
+                        </button>
+                    </form>
+                </section>
+            </div>
+            <div class = "separator">
+                <div></div>
+                <div>ou</div>
+                <div></div>
+    
+            </div>
             <section>
-                <h2> Entre como participante</h2>
-                <form action="">
-                    <label class ="sr.-only" for="room-id">Código da sala</label>
-                    <input type="number" id="room-id" placeholder="Código da sala">
-                    <button>
-                        <img src ="assets/enter-room.svg" alt="Entrar na sala">
-                    </button>
-                </form>
+                <h2>Crie sua própria sala de forma fácil</h2>
+                <a href="create-room.html">
+                    Criar Sala
+                </a>
             </section>
-        </div>
-        <div class = "separator">
-            <div></div>
-            <div>ou</div>
-            <div></div>
-
-        </div>
-        <section>
-            <h2>Crie sua própria sala de forma fácil</h2>
-            <a href="create-room.html">
-                Criar Sala
-            </a>
-        </section>
-    </main>
+        </main>
+    </div>
+    
 </body>
 
 </html>
