--- a/home.html
+++ b/home.html
@@ -15,10 +15,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div id = "home" class="content">
+    <div id ="home" class="content">
         <header>
             <img src="assets/Logo.svg" alt="logo"/>
         </header>
+        <div id="bg">
+
+        </div>
         <main>
             <div class = "container">
                 <section>
@@ -27,11 +30,10 @@
                         <label class ="sr-only" for="room-id">Código da sala</label>
                         <input type="number" id="room-id" placeholder="Código da sala">
                         <button>
-                            <img src ="assets/create-room.svg" alt="Entrar na sala">
+                            <img src ="assets/enter-room.svg" alt="Entrar na sala">
                         </button>
                     </form>
                 </section>
-            </div>
             <div class = "separator">
                 <div></div>
                 <div>ou</div>
@@ -40,13 +42,12 @@
             </div>
             <section>
                 <h2>Crie sua própria sala de forma fácil</h2>
-                <a href="create-room.html">
+                <a href="create-room.html" class="button outlined" alt="Criar Sala">
                     Criar Sala
                 </a>
             </section>
+            </div>
         </main>
     </div>
-    
 </body>
-
 </html>
