--- a/create-pass.html
+++ b/create-pass.html
@@ -26,27 +26,15 @@
         <main>
             <div class = "container">
                 <section>
-                    <h2> Entre como participante</h2>
+                    <h2> Crie sua própria sala</h2>
                     <form action="">
-                        <label class ="sr-only" for="room-id">Código da sala</label>
-                        <input type="number" id="room-id" placeholder="Código da sala">
+                        <label class ="sr-only" for="room-pass">Insira uma senha</label>
+                        <input type="password" id="room-pass" placeholder="Insira uma senha">
                         <button>
-                            <img src ="assets/enter-room.svg" alt="Entrar na sala">
+                            <img src ="assets/users.svg" alt="Criar sala">
                         </button>
                     </form>
                 </section>
-            <div class = "separator">
-                <div></div>
-                <div>ou</div>
-                <div></div>
-    
-            </div>
-            <section>
-                <h2>Crie sua própria sala de forma fácil</h2>
-                <a href="create-room.html" class="button outlined" alt="Criar Sala">
-                    Criar Sala
-                </a>
-            </section>
             </div>
         </main>
     </div>
