Add icons for transition buttons and update password

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
             </div>
             <section>
                 <h2>Crie sua própria sala de forma fácil</h2>
-                <a href="create-room.html" class="button outlined" alt="Criar Sala">
+                <a href="create-pass.html" class="button outlined" alt="Criar Sala">
                     Criar Sala
                 </a>
             </section>
