Add question contents, check and delete icons

--- a/room.html
+++ b/room.html
@@ -47,6 +47,30 @@
                         </footer>
                     </form>
                 </section>
+                <section id="questions">
+                    <h2 class="sr-only">Perguntas da Comunidade</h2>
+                    <div class="questions">
+                        <div class="question-wrapper">
+                            <div class="question-content">
+                                <div class="user">
+                                    <img src="assets/avatar.svg" alt="Avatar">
+                                </div>
+                                <div class="question">
+                                    <p>Qual a diferença entre const, var e let no Javascript?</p>
+                                </div>
+                            </div>
+                            <div class="actions"></div>
+                            <a href="#" class="check">
+                                <img src="assets/check.svg" alt="Marcar como lida">
+                                Marcar como Lida
+                            </a>
+                            <a href="#" class="delete">
+                                <img src="assets/trash.svg" alt="Excluir">
+                                Excluir
+                            </a>
+                        </div>
+                    </div>
+                </section>
             </main>
         </div>
     </body>
