Fix some position icons and add new question wrappers

--- a/create-pass.html
+++ b/create-pass.html
@@ -31,7 +31,7 @@
                         <label class ="sr-only" for="room-pass">Insira uma senha</label>
                         <input type="password" id="room-pass" placeholder="Insira uma senha">
                         <button>
-                            <img src ="assets/users.svg" alt="Criar sala">
+                            <img src ="assets/userswhite.svg" alt="Criar sala"> Criar Sala
                         </button>
                     </form>
                 </section>
