--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
                         <label class ="sr-only" for="room-id">Código da sala</label>
                         <input type="number" id="room-id" placeholder="Código da sala">
                         <button>
-                            <img src ="assets/enter-room.svg" alt="Entrar na sala">
+                            <img src ="assets/enter-room.svg" alt="Entrar na sala">Entrar na Sala
                         </button>
                     </form>
                 </section>
@@ -43,7 +43,7 @@
             </div>
             <section>
                 <h2>Crie sua própria sala de forma fácil</h2>
-                <a href="create-pass.html" class="button outlined" alt="Criar Sala">
+                <a href="create-pass.html"  class="button outlined" alt="Criar Sala">
                     Criar Sala
                 </a>
             </section>
