--- a/room.html
+++ b/room.html
@@ -70,6 +70,50 @@
                             </a>
                         </div>
                     </div>
+
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/avatar.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é Javascript?</p>
+                            </div>
+                        </div>
+                        <div class="actions"></div>
+                        <a href="#" class="check">
+                            <img src="assets/check.svg" alt="Marcar como lida">
+                            Marcar como Lida
+                        </a>
+                        <a href="#" class="delete">
+                            <img src="assets/trash.svg" alt="Excluir">
+                            Excluir
+                        </a>
+                    </div>
+                </div>
+
+                    <div class="question-wrapper">
+                        <div class="question-content">
+                            <div class="user">
+                                <img src="assets/avatar.svg" alt="Avatar">
+                            </div>
+                            <div class="question">
+                                <p>O que é Typescript?</p>
+                            </div>
+                        </div>
+                        <div class="actions"></div>
+                        <a href="#" class="check">
+                            <img src="assets/check.svg" alt="Marcar como lida">
+                            Marcar como Lida
+                        </a>
+                        <a href="#" class="delete">
+                            <img src="assets/trash.svg" alt="Excluir">
+                            Excluir
+                        </a>
+                    </div>
+                </div>
+        </div>
+    </div>
                 </section>
             </main>
         </div>
