Add another icon user for markread questions

--- a/room.html
+++ b/room.html
@@ -53,7 +53,7 @@
                         <div class="question-wrapper">
                             <div class="question-content">
                                 <div class="user">
-                                    <img src="assets/avatar.svg" alt="Avatar">
+                                    <img src="assets/user.svg" alt="Avatar">
                                 </div>
                                 <div class="question">
                                     <p>Qual a diferença entre const, var e let no Javascript?</p>
@@ -74,7 +74,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/avatar.svg" alt="Avatar">
+                                <img src="assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>O que é Javascript?</p>
@@ -95,7 +95,7 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="assets/avatar.svg" alt="Avatar">
+                                <img src="assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>O que é Typescript?</p>
