Add new color for question-read and a new grid

--- a/room.html
+++ b/room.html
@@ -92,20 +92,38 @@
                     </div>
                 </div>
 
-                    <div class="question-wrapper">
+                <div class="question-wrapper">
+                    <div class="question-content">
+                        <div class="user">
+                            <img src="assets/user.svg" alt="Avatar">
+                        </div>
+                        <div class="question">
+                            <p>Você já sabe quais as bases você precisa melhorar para alcançar o seu próximo nível de maestria?</p>
+                        </div>
+                    </div>
+                    <div class="actions"></div>
+                    <a href="#" class="check">
+                        <img src="assets/check.svg" alt="Marcar como lida">
+                        Marcar como Lida
+                    </a>
+                    <a href="#" class="delete">
+                        <img src="assets/trash.svg" alt="Excluir">
+                        Excluir
+                    </a>
+                </div>
+            </div>
+
+                    <div class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
                                 <img src="assets/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
-                                <p>O que é Typescript?</p>
+                                <p>O que é Script?</p>
                             </div>
                         </div>
                         <div class="actions"></div>
-                        <a href="#" class="check">
-                            <img src="assets/check.svg" alt="Marcar como lida">
-                            Marcar como Lida
-                        </a>
+                      
                         <a href="#" class="delete">
                             <img src="assets/trash.svg" alt="Excluir">
                             Excluir
